Ingress/service.yml
apiVersion: v1 
kind: Service
metadata:
  name: Nginx-ingress
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http 
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    name: Nginx-ingress
